--- a/contentful/deep-copy/index.html
+++ b/contentful/deep-copy/index.html
@@ -96,11 +96,11 @@
       </div>
     </div>
 
-    <script src="/index.81e41450.js" defer=""></script>
+    <script src="./index.81e41450.js" defer=""></script>
     <script type="text/javascript">window.contentfulApp.init(function(extension) {
-    const value = extension.field.getValue();
+    /*const value = extension.field.getValue();
     extension.field.setValue('Hello world!');
-});
+});*/
 
 </script>
   </body>
